# Basic_Fantasy_RPG_Simulator

./: Cargo.toml
src/: #dicepool.rs#  .#dicepool.rs  ability.rs  ability_score.rs  ability_score_set.rs  ability_scores.rs  action.rs  actor.rs  agent.rs  ancestry.rs  character.rs  character_error.rs  class.rs  creature.rs  dice.rs  dice_expr.rs  dicepool.rs  direction.rs  equipment.rs  game.rs  game_action.rs  game_mod.rs  grid.rs  input.rs  item.rs  lib.rs  main.rs  monster.rs  point.rs  view.rs
src/character/: ability.rs  ability_score.rs  ability_score_set.rs  ability_scores.rs  ancestry.rs  character.rs  character_error.rs  class.rs
src/character_mod/: ability_score.rs  ability_score_set.rs  character.rs  equipment.rs
src/dice_expr/: dice.rs  dicepool.rs
src/dice_expr_mod/: dice_pool.rs
src/game/: agent.rs  game.rs  game_action.rs  game_object.rs
src/game_mod/: action.rs  actor.rs  agent.rs  direction.rs  game.rs  game_action.rs  game_object.rs  point.rs  prototype_agent.rs
