[package]
name = "basic_fantasy_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
regex = "1"
names = "0.14.0"

[lib]
name = "basic_fantasy_rpg_simulator"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"